--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
 		"eslint-plugin-prettier": "^3.1.2",
 		"file-loader": "^5.0.2",
 		"mini-css-extract-plugin": "^0.9.0",
-		"node-sass": "^4.13.1",
 		"postcss-loader": "^3.0.0",
 		"prettier": "^1.19.1",
 		"prettier-stylelint": "^0.4.2",
 		"release-it": "^13.3.1",
+		"sass": "^1.26.3",
 		"sass-loader": "^8.0.2",
 		"style-loader": "^1.1.3",
 		"stylelint": "^13.0.0",
