--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"autoprefixer": "^9.7.4",
+		"browser-sync-webpack-plugin": "^2.2.2",
 		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^3.4.2",
 		"eslint": "^6.8.0",
@@ -35,5 +36,9 @@
 		"webpack-cli": "^3.3.10",
 		"webpack-dev-server": "^3.10.1",
 		"webpack-merge": "^4.2.2"
+	},
+	"dependencies": {
+		"browser-sync": "^2.26.7",
+		"fibers": "^4.0.2"
 	}
 }
