--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"devDependencies": {
 		"autoprefixer": "^9.7.4",
 		"browser-sync-webpack-plugin": "^2.2.2",
+		"chokidar": "^3.3.1",
 		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^3.4.2",
 		"eslint": "^6.8.0",
