--- a/package.json
+++ b/package.json
@@ -3,10 +3,18 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
+	"config": {
+		"env_dev": "cross-env NODE_ENV=development ",
+		"env_prod": "cross-env NODE_ENV=production ",
+		"server_dev": "webpack-dev-server --config webpack.dev.js",
+		"prod": "cross-env NODE_ENV=production && webpack --config webpack.prod.js"
+	},
 	"scripts": {
-		"dev_care": "set NODE_ENV=development && webpack-dev-server --config webpack.dev.js --env.url=care",
-		"dev_style": "set NODE_ENV=development && webpack-dev-server --config webpack.dev.js --env.url=style",
-		"prod": "set NODE_ENV=production && webpack --config webpack.prod.js",
+		"treta": "echo $npm_package_config_treta",
+		"dev": "$npm_package_config_env_dev && $npm_package_config_server_dev",
+		"dev_care": "$npm_package_config_env_dev && $npm_package_config_server_dev --env.url=care",
+		"dev_style": "$npm_package_config_env_dev && $npm_package_config_server_dev --env.url=style",
+		"prod": "$npm_package_config_prod",
 		"new:build": "npm run prod && git add . && git commit -m \"New Release\" --allow-empty && git push origin master",
 		"release:patch": "npm run new:build && release-it patch --ci",
 		"release:minor": "npm run new:build && release-it minor --git.requireBranch=master",
@@ -19,7 +27,9 @@
 		"browser-sync-webpack-plugin": "^2.2.2",
 		"chokidar": "^3.3.1",
 		"clean-webpack-plugin": "^3.0.0",
+		"cross-env": "^7.0.2",
 		"css-loader": "^3.4.2",
+		"dotenv": "^8.2.0",
 		"eslint": "^6.8.0",
 		"eslint-config-prettier": "^6.9.0",
 		"eslint-plugin-prettier": "^3.1.2",
